sandbox/output
PatientTest.java:12: error: constructor Medicine in class Medicine cannot be applied to given types;
        Medicine codeine = new Medicine("Codeine", 
                           ^
  required: no arguments
  found: String,List<Prescription>
  reason: actual and formal argument lists differ in length
PatientTest.java:15: error: cannot find symbol
        assertEquals(0, patient.clash(Arrays.asList(codeine, prozac), 90));
                                                             ^
  symbol:   variable prozac
  location: class PatientTest
2 errors
